k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: mern
spec:
  selector:
    app: mongodb
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
  type: ClusterIP
